Implemented service to update last request
