# docs/openapi/api-eservice-operations-interop-v1.yaml
@@ -419,9 +419,67 @@ paths:
                 detail: 'There is a problem processing the request on the server.'
                 traceId: 'string'
                 errors: [ { 'code': '000-1234', 'detail': 'The server is currently down for maintenance. Please try again later.' } ]
+  
+  '/eservices/{eserviceRecordId}/updateLastRequest':
+    post:
+      summary: Update last request of the eservice
+      description: >-
+        Update last request of the eservice
+      tags:
+        - Write
+      operationId: updateLastRequest
+      parameters:
+        - name: eserviceRecordId
+          in: path
+          required: true
+          description: The e-service record id
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ChangeLastRequest'
+      
+      responses:
+        '204':
+          description: >-
+            The last request of the eservice has been updated successfully
+        '400':
+          description: >-
+            The provided input data is invalid
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '500':
+          description: >-
+            A managed error has occured during the request elaboration
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+              example:
+                type: string
+                status: 500
+                title: 'Internal Server Error'
+                detail: 'There is a problem processing the request on the server.'
+                traceId: 'string'
+                errors: [ { 'code': '000-1234', 'detail': 'The server is currently down for maintenance. Please try again later.' } ]
 
 components:
   schemas:
+    ChangeLastRequest:
+      type: object
+      required:
+        - lastRequest
+      properties:
+        lastRequest:
+          type: string
+          format: date-time
+  
     EserviceSaveRequest:
       type: object
       required:
